--- a/web/llevame/src/App.css
+++ b/web/llevame/src/App.css
@@ -20,9 +20,8 @@ a {
 }
 
 footer {
-  position: relative;
   width: 100%;
-  bottom: 0;
+  margin-top: auto;
   height: 2.5rem;
   background-color: #29ABE2;
   color: #fff;
